# example

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Example.cpp  Example.hpp  LICENSE  main.cpp
.githooks/: pre-commit
apps/: CMakeLists.txt  main.cpp
cmake/: GetGitRevisionDescription.cmake
docs/: CMakeLists.txt
include/example/: example.hpp
include/utility/: erroror.h
src/: CMakeLists.txt  example.cpp
tests/: CMakeLists.txt  ExampleTests.cpp  example_tests.cpp
